# Yolofast_license_plate

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  yolo.h  yolofast_license_plate
yolo-fastest/: yolo-fastest-1.1.cfg  yolo-fastest-1_final.weights
